--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,6 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /src/.vs/ECommon/v15
+
+.vs/StarApp/v15/Server/sqlite3/db.lock
+.vs/StarApp/v15/Server/sqlite3/storage.ide
