--- a/.gitignore
+++ b/.gitignore
@@ -157,5 +157,5 @@ $RECYCLE.BIN/
 .DS_Store
 /src/.vs/ECommon/v15
 
-.vs/StarApp/v15/Server/sqlite3/db.lock
-.vs/StarApp/v15/Server/sqlite3/storage.ide
+/StarApp/.vs/StarApp/v15/Server/sqlite3/db.lock
+/StarApp/.vs/StarApp/v15/Server/sqlite3/storage.ide
